--- a/BookStore/Views/Category/Create.cshtml
+++ b/BookStore/Views/Category/Create.cshtml
@@ -4,13 +4,21 @@
     <div class="row pb-2">
         <h2>Create Category</h2>
     </div>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    @* 
+        asp-validation-summary = ALL - To display all the validation errors.
+        asp-validation-summary = ModelOnly - To display only custom model errors which are setup in the code.
+            ex:- ModelState.AddModelError("name", "Category Name and Display Order should not be same");
+    *@
     <div class="form-group">
         <label asp-for="Name" class="form-label mt-4"></label>
         <input asp-for="Name" class="form-control" placeholder="Enter category">
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="DisplayOrder" class="form-label mt-4"></label>
-        <input asp-for="DisplayOrder" class="form-control" placeholder="4">
+        <input asp-for="DisplayOrder" class="form-control" placeholder="Enter number">
+        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
     </div>
     <div class="row pt-2">
         <div class="col-md-6 col-lg-6">
@@ -23,3 +31,8 @@
         </div>
     </div>
 </form>
+
+@section Scripts 
+{
+    @{ <partial name="_ValidationScriptsPartial"/> }
+}
