--- a/BookStore/Views/Category/Delete.cshtml
+++ b/BookStore/Views/Category/Delete.cshtml
@@ -1,21 +1,20 @@
 ﻿@model Category
 
 <form method="post">
-    <input type="hidden" asp-for="@Model.Id" />
     <div class="row pb-2">
-        <h2>Edit Category</h2>
+        <h2>Delete Category</h2>
     </div>
     <div class="form-group">
         <label asp-for="Name" class="form-label mt-4"></label>
-        <input asp-for="Name" class="form-control" placeholder="Enter category">
+        <input asp-for="Name" class="form-control" placeholder="Enter category" disabled>
     </div>
     <div class="form-group">
         <label asp-for="DisplayOrder" class="form-label mt-4"></label>
-        <input asp-for="DisplayOrder" class="form-control" placeholder="4">
+        <input asp-for="DisplayOrder" class="form-control" placeholder="4" disabled>
     </div>
     <div class="row pt-2">
         <div class="col-md-6 col-lg-6">
-            <button type="submit" class="btn btn-success">Submit</button>
+            <button type="submit" class="btn btn-danger">Delete</button>
         </div>
         <div class="col-md-6 col-lg-6 text-end">
             <a asp-controller="Category" asp-action="Index" class="btn btn-primary">
