--- a/BookStore/Views/Login/Index.cshtml
+++ b/BookStore/Views/Login/Index.cshtml
@@ -6,12 +6,12 @@
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
         <label asp-for="Username" class="form-label mt-4"></label>
-        <input asp-for="Username" class="form-control" placeholder="Enter category">
+        <input asp-for="Username" class="form-control" placeholder="Enter Username">
         <span asp-validation-for="Username" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Password" class="form-label mt-4"></label>
-        <input asp-for="Password" class="form-control" placeholder="Enter number">
+        <input asp-for="Password" class="form-control" placeholder="Enter Password">
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="row pt-2">
@@ -20,3 +20,9 @@
         </div>
     </div>
 </form>
+@section Scripts
+{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
