--- a/BookStore/Views/Login/Index.cshtml
+++ b/BookStore/Views/Login/Index.cshtml
@@ -1,25 +1,35 @@
 ﻿@model Login
-<form method="post">
-    <div class="row pb-2">
-        <h2>Login</h2>
-    </div>
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Username" class="form-label mt-4"></label>
-        <input asp-for="Username" class="form-control" placeholder="Enter Username">
-        <span asp-validation-for="Username" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="form-label mt-4"></label>
-        <input asp-for="Password" class="form-control" placeholder="Enter Password">
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div class="row pt-2">
-        <div class="col-md-6 col-lg-6">
-            <button type="submit" class="btn btn-success">Submit</button>
+<div class="card mb-3 box-shadow">
+    <div class="card-header bg-dark">
+        <div class="row pb-2">
+            <h2>Login</h2>
         </div>
     </div>
-</form>
+    <div class="card-body">
+        <form method="post">
+            <div class="row pb-2">
+                <h2>Login</h2>
+            </div>
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Username" class="form-label mt-4"></label>
+                <input asp-for="Username" class="form-control" placeholder="Enter Username">
+                <span asp-validation-for="Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="form-label mt-4"></label>
+                <input asp-for="Password" class="form-control" placeholder="Enter Password">
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="row pt-2">
+                <div class="col-md-6 col-lg-6">
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
 @section Scripts
 {
     @{
