--- a/BookStore/Areas/Admin/Views/Product/Delete.cshtml
+++ b/BookStore/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,15 +1,12 @@
 ﻿@model Product
-@{
-    var pageName = Convert.ToString(ViewData["PageName"]);
-}
 <div class="card mb-3 box-shadow">
     <div class="card-header bg-dark">
         <div class="row pb-2">
-            <h2>@pageName Product</h2>
+            <h2>Delete Product</h2>
         </div>
     </div>
     <div class="card-body">
-        <form method="post" asp-action="@pageName" asp-asp-controller="Product" asp-area="Admin">
+        <form method="post">
 
             <div asp-validation-summary="All" class="text-danger"></div>
             @*
@@ -19,27 +16,27 @@
             *@
             <div class="form-group">
                 <label asp-for="Title" class="form-label mt-4"></label>
-                <input asp-for="Title" class="form-control" placeholder="Enter Title">
+                <input asp-for="Title" class="form-control" placeholder="Enter Title" disabled>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ISBN" class="form-label mt-4"></label>
-                <input asp-for="ISBN" class="form-control" placeholder="Enter ISBN">
+                <input asp-for="ISBN" class="form-control" placeholder="Enter ISBN" disabled>
                 <span asp-validation-for="ISBN" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="form-label mt-4"></label>
-                <input asp-for="Description" class="form-control" placeholder="Enter Description">
+                <textarea asp-for="Description" class="form-control" placeholder="Enter Description" disabled></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Author" class="form-label mt-4"></label>
-                <input asp-for="Author" class="form-control" placeholder="Enter Description">
+                <input asp-for="Author" class="form-control" placeholder="Enter Description" disabled>
                 <span asp-validation-for="Author" class="text-danger"></span>
             </div>
             <div class="row pt-2">
                 <div class="col-md-6 col-lg-6">
-                    <button type="submit" class="btn btn-success">Submit</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
                 </div>
                 <div class="col-md-6 col-lg-6 text-end">
                     <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="btn btn-primary">
