--- a/BookStore/Areas/Admin/Views/Product/Index.cshtml
+++ b/BookStore/Areas/Admin/Views/Product/Index.cshtml
@@ -1,9 +1,9 @@
-﻿@*
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
-@model List<Product>
+@model List<ListProductVM>
 <div class="card mb-3 box-shadow">
     <div class="card-header bg-dark text-center">
         <div class="row pb-2">
@@ -22,6 +22,7 @@
                     <th scope="col">Title</th>
                     <th scope="col">ISBN</th>
                     <th scope="col">Description</th>
+                    <th scope="col">Category</th>
                     <th scope="col">Author</th>
                     <th scope="col">Action</th>
                 </tr>
@@ -30,15 +31,16 @@
                 @foreach (var product in Model)
                 {
                     <tr class="table-secondary">
-                        <td>@product.Title</td>
-                        <td>@product.ISBN</td>
-                        <td>@product.Description</td>
-                        <td>@product.Author</td>
+                        <td>@product.Product.Title</td>
+                        <td>@product.Product.ISBN</td>
+                        <td>@product.Product.Description</td>
+                        <td>@product.Category.Text</td>
+                        <td>@product.Product.Author</td>
                         <td>
-                            <a asp-area="Admin" asp-controller="Product" asp-action="Edit" class="btn btn-primary" asp-route-id="@product.Id">
+                            <a asp-area="Admin" asp-controller="Product" asp-action="Edit" class="btn btn-primary" asp-route-id="@product.Product.Id">
                                 <i class="bi bi-pencil-square"></i> EDIT
                             </a>
-                            <a asp-area="Admin" asp-controller="Product" asp-action="Delete" class="btn btn-danger" asp-route-id="@product.Id">
+                            <a asp-area="Admin" asp-controller="Product" asp-action="Delete" class="btn btn-danger" asp-route-id="@product.Product.Id">
                                 <i class="bi bi-trash"></i> DELETE
                             </a>
                         </td>
