--- a/BookStore/Areas/Admin/Views/Product/Create.cshtml
+++ b/BookStore/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ProductVM
 <div class="card mb-3 box-shadow">
     <div class="card-header bg-dark">
         <div class="row pb-2">
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="card-body">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
 
             <div asp-validation-summary="All" class="text-danger"></div>
             @*
@@ -15,24 +15,35 @@
             ex:- ModelState.AddModelError("name", "Category Name and Display Order should not be same");
             *@
             <div class="form-group">
-                <label asp-for="Title" class="form-label mt-4"></label>
-                <input asp-for="Title" class="form-control" placeholder="Enter Title">
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="Product.Title" class="form-label mt-4"></label>
+                <input asp-for="Product.Title" class="form-control" placeholder="Enter Title">
+                <span asp-validation-for="Product.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ISBN" class="form-label mt-4"></label>
-                <input asp-for="ISBN" class="form-control" placeholder="Enter ISBN">
-                <span asp-validation-for="ISBN" class="text-danger"></span>
+                <label asp-for="Product.ISBN" class="form-label mt-4"></label>
+                <input asp-for="Product.ISBN" class="form-control" placeholder="Enter ISBN">
+                <span asp-validation-for="Product.ISBN" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="form-label mt-4"></label>
-                <input asp-for="Description" class="form-control" placeholder="Enter Description">
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Product.Description" class="form-label mt-4"></label>
+                <textarea asp-for="Product.Description" class="form-control" placeholder="Enter Description"></textarea>
+                <span asp-validation-for="Product.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Author" class="form-label mt-4"></label>
-                <input asp-for="Author" class="form-control" placeholder="Enter Description">
-                <span asp-validation-for="Author" class="text-danger"></span>
+                <label asp-for="Product.Author" class="form-label mt-4"></label>
+                <input asp-for="Product.Author" class="form-control" placeholder="Enter Description">
+                <span asp-validation-for="Product.Author" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Product.ImageUrl" class="form-label mt-4"></label>
+                <input type="file" name="file" asp-for="Product.ImageUrl" class="form-control" placeholder="Enter Url">
+            </div>
+            <div class="form-group">
+                <label asp-for="Product.CategoryId" class="form-label mt-4"></label>
+                <select class="form-select" asp-for="Product.CategoryId" asp-items="@Model.Categories">
+                    <option disabled selected>--Select Category--</option>
+                </select>
+                <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
             </div>
             <div class="row pt-2">
                 <div class="col-md-6 col-lg-6">
