--- a/BookStore/Areas/Admin/Views/Product/Edit.cshtml
+++ b/BookStore/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,7 +1,4 @@
 @model ProductVM
-@{
-    var categories = ViewBag.Categories;
-}
 <div class="card mb-3 box-shadow">
     <div class="card-header bg-dark">
         <div class="row pb-2">
@@ -9,59 +6,64 @@
         </div>
     </div>
     <div class="card-body">
-        <form method="post" enctype="multipart/form-data">
+        <div asp-validation-summary="All" class="text-danger"></div>
+        @*
+        asp-validation-summary = ALL - To display all the validation errors.
+        asp-validation-summary = ModelOnly - To display only custom model errors which are setup in the code.
+        ex:- ModelState.AddModelError("name", "Category Name and Display Order should not be same");
+        *@
+        <form method="post" enctype="multipart/form-data" class="row">
+            <div class="col-sm-4 overflow-hidden">
+                <img src="@Model.Product.ImageUrl" alt="Image" style="width: 100%; height: 75%;border-radius: 50%;display: block;margin-top: 4rem;" />
+            </div>
+            <div class="col-sm-8">
+                <input hidden asp-for="Product.Id"/>
+                <div class="form-group">
+                    <label asp-for="Product.Title" class="form-label mt-4"></label>
+                    <input asp-for="Product.Title" class="form-control" placeholder="Enter Title">
+                    <span asp-validation-for="Product.Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Product.ISBN" class="form-label mt-4"></label>
+                    <input asp-for="Product.ISBN" class="form-control" placeholder="Enter ISBN">
+                    <span asp-validation-for="Product.ISBN" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Product.Description" class="form-label mt-4"></label>
+                    <textarea asp-for="Product.Description" class="form-control" placeholder="Enter Description"></textarea>
+                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Product.Author" class="form-label mt-4"></label>
+                    <input asp-for="Product.Author" class="form-control" placeholder="Enter Description">
+                    <span asp-validation-for="Product.Author" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Product.ImageUrl" class="form-label mt-4"></label>
+                    <input type="file" name="file" asp-for="Product.ImageUrl" class="form-control" placeholder="Enter Url">
+                </div>
+                <div class="form-group">
+                    <label asp-for="Product.CategoryId" class="form-label mt-4"></label>
+                    <select class="form-select" asp-for="Product.CategoryId" asp-items="@Model.Categories">
+                        <option disabled selected>--Select Category--</option>
+                    </select>
+                    <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                </div>
+                <div class="row pt-2">
+                    <div class="col-md-6 col-lg-6">
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </div>
+                    <div class="col-md-6 col-lg-6 text-end">
+                        <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="btn btn-primary">
+                            Back to list
+                        </a>
+                    </div>
+                </div>
+            </div>
 
-            <div asp-validation-summary="All" class="text-danger"></div>
-            @*
-            asp-validation-summary = ALL - To display all the validation errors.
-            asp-validation-summary = ModelOnly - To display only custom model errors which are setup in the code.
-            ex:- ModelState.AddModelError("name", "Category Name and Display Order should not be same");
-            *@
-            <div class="form-group">
-                <label asp-for="Product.Title" class="form-label mt-4"></label>
-                <input asp-for="Product.Title" class="form-control" placeholder="Enter Title">
-                <span asp-validation-for="Product.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.ISBN" class="form-label mt-4"></label>
-                <input asp-for="Product.ISBN" class="form-control" placeholder="Enter ISBN">
-                <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.Description" class="form-label mt-4"></label>
-                <textarea asp-for="Product.Description" class="form-control" placeholder="Enter Description"></textarea>
-                <span asp-validation-for="Product.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.Author" class="form-label mt-4"></label>
-                <input asp-for="Product.Author" class="form-control" placeholder="Enter Description">
-                <span asp-validation-for="Product.Author" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.ImageUrl" class="form-label mt-4"></label>
-                <input type="file" name="file" asp-for="Product.ImageUrl" class="form-control" placeholder="Enter Url">
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.CategoryId" class="form-label mt-4"></label>
-                <select class="form-select" asp-for="Product.CategoryId" asp-items="@Model.Categories">
-                    <option disabled selected>--Select Category--</option>
-                </select>
-                <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-            </div>
-            <div class="row pt-2">
-                <div class="col-md-6 col-lg-6">
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </div>
-                <div class="col-md-6 col-lg-6 text-end">
-                    <a asp-area="Admin" asp-controller="Product" asp-action="Index" class="btn btn-primary">
-                        Back to list
-                    </a>
-                </div>
-            </div>
         </form>
     </div>
 </div>
-
 
 @section Scripts
 {
